<resources>
    <string name="enquiry_or_suggestion">Enquiry or Suggestion</string>
    <string name="fill_following_form">Fill following form</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="faqs_aarunya">FAQs - Aarunya</string>
    <string name="who_all_can_register_on_aarunya">* Who all can register on Aarunya?</string>
    <string name="one_may_register_as_producer_farmer_consumer_wholeseller_or_transporter_voter_id_card_no_is_must_for_registering_for_any_of_the_above_three_category_but_for_registering_as_a_transporter_driving_license_no_and_vehicle_registration_details_are_must">One may register as producer (farmer), consumer (wholeseller) or transporter. Voter ID card no. is must for registering for any of the above three category. But for registering as a transporter Driving License No. and Vehicle Registration Details are must.</string>
    <string name="as_a_farmer_or_producer_why_should_i_sell_on_aarunya">*As a farmer or producer why should i sell on Aarunya?</string>
    <string name="it_will_enable_producer_farmers_and_consumer_to_directly_contact_each_other_for_maximum_profit_we_will_provide_with_the_strongest_platform_to_take_one_s_crop_all_over_the_country">it will enable producer (farmers) and consumer to directly contact each other for maximum profit. We will provide with the strongest platform to take one\'s crop all over the country.</string>
    <string name="how_can_i_buy_on_aarunya">*How can i buy on Aarunya?</string>
    <string name="steps_to_follow_register_yourself_as_consumer_search_for_the_crop_wanted_required_from_the_provided_list_enter_the_quantity_for_purchase_negotiate_with_the_producer_seller"><![CDATA[Steps to follow: > Register yourself as consumer. > Search for the crop wanted/required from the provided list. > Enter the quantity for purchase. > Negotiate with the producer/seller.]]></string>
    <string name="who_decides_the_rate_of_the_crops">*Who decides the rate of the crops?</string>
    <string name="the_farmer_will_himself_set_the_price_of_his_crops">The farmer will himself set the price of his crops.</string>
    <string name="will_there_be_any_charges_for_registration_on_the_app">*Will there be any charges for registration on the app?</string>
    <string name="no_registring_on_the_app_is_absolutely_free_this_app_doesn_t_even_charge_for_listing">No,registring on the app is absolutely free. This app doesn\'t even charge for listing.</string>
    <string name="what_is_listing">*What is listing?</string>
    <string name="listing_refers_to_filling_out_all_the_necessary_information_and_adding_images_of_the_product_so_that_a_customer_can_make_a_informed_buying_decision">Listing refers to filling out all the necessary information and adding images of the product so that a customer can make a informed buying decision.</string>
    <string name="who_takes_care_of_delivery_of_my_crop">*Who takes care of delivery of my crop?</string>
    <string name="the_transporters_who_have_registered_successfully_with_the_app_and_are_ready_to_carry_out_the_delivery_work_at_given_rate">The transporters who have registered successfully with the app and are ready to carry out the delivery work at given rate.</string>
    <string name="your_name">your name</string>
    <string name="your_mail_id">your mail ID</string>
    <string name="submit">Submit</string>
    <string name="app_name">Aarunya</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Create a New Account</string>
    <string name="select_language">Select Language</string>
    <string name="register">Register</string>
    <string name="name_text">Name</string>
    <string name="name_edit">Enter Name</string>
    <string name="dob_text">D.O.B.</string>
    <string name="dob_edit">Enter Date of Birth</string>
    <string name="state_text">State</string>
    <string name="state_spinner">Select State</string>
    <string name="district_text">District</string>
    <string name="district_spinner">Select District</string>
    <string name="address_text">Address</string>
    <string name="address_edit">Enter Address</string>
    <string name="phone_text">Mobile Number</string>
    <string name="phone_edit">Enter Mobile Number</string>
    <string name="uid_text">Aadhaar Number</string>
    <string name="uid_edit">Enter Aadhaar Number</string>
    <string name="register_as">Register As:</string>
    <string name="producer">Producer</string>
    <string name="buyer">Buyer</string>
    <string name="transporter">Transporter</string>
    <string name="register_as_producer">Register as Producer</string>
    <string name="register_as_buyer">Register as Buyer</string>
    <string name="register_as_transporter">Register as Transporter</string>
    <string name="submit_btn">Submit</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="transporter_detail">Transport Details</string>
    <string name="driver_license_number_text">Driving License Number</string>
    <string name="driver_license_number_edit">Enter Driving License Number</string>
    <string name="vehicle_registration_text">Vehicle Registration Number</string>
    <string name="vehicle_registration_edit">Enter Vehicle Registration Number</string>
    <string name="vehicle_type_text">Vehicle Type</string>
    <string name="vehicle_type_spinner">Select Type of Vehicle</string>
    <string name="transport_capacity_text">Vehicle Capacity</string>
    <string name="transport_capacity_edit">Enter Vehicle Capacity</string>
    <string name="transport_capacity_unit_edit">Enter Vehicle Capacity Unit</string>
    <string name="price_km_text">Price per KM</string>
    <string name="price_km_edit">Enter Price per KM</string>
    <string name="pass_confirm_hint">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="reg_login_btn_text">Have an Account? Login</string>
    <string name="farmer_posts">Farmer's Posts</string>
    <string name="crop_text">Crop</string>
    <string name="quantity_text">Quantity</string>
    <string name="price_text">Price</string>
    <string name="buy_btn">Buy</string>
    <string name="chat_btn">Chat</string>
    <string name="trans_view">View Assignments</string>
    <string name="trans_news">News</string>
    <string name="trans_weat">Weather Report</string>
    <string name="trans_helpline">Helpline</string>
    <string name="trans_hist">History</string>
    <string name="conf">Email</string>
    <string name="trans_contact">Contact</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="distance_text">Distance</string>
    <string name="total_payment_text">Total Payment</string>
    <string name="route_btn">Route</string>
    <string name="contact_btn">Contact</string>
    <string name="transport_assignments">Transport Assignments</string>
    <string name="confirm_btn">Confirm</string>
    <string name="estimated_time_text">Estimated Time</string>
    <string name="pro_enquiry">Enquiry</string>
    <string name="pro_complain">complain</string>
    <string name="pro_employment">employment</string>
    <string name="pro_faq">Faq</string>
    <string name="pro_farmingnews">farming news</string>
    <string name="pro_weather">weather reports</string>
    <string name="pro_govtoffers">govt offers</string>
    <string name="pro_sell">sell</string>
    <string name="pro_mandi">Mandi Rates</string>
    <string name="pro_commodity">Commodity</string>
    <string name="pro_br">Basic Rate per kg (in Rs.)</string>
    <string name="pro_quantity">Quantity</string>
    <string name="pro_rate">Rate</string>
    <string name="pro_producers">producers</string>
    <string-array name="pro_commodities">
        <item>Potato</item>
        <item>Onion</item>
        <item>Rice</item>
        <item>Wheat</item>
        <item>Garlic</item>
        <item>Ginger</item>
    </string-array>
    <string name="consumer">consumer</string>
    <string name="conenquiry">Enquiry</string>
    <string name="concomplain">complain</string>
    <string name="conemployment">employment</string>
    <string name="confaq">faq</string>
    <string name="confarmingnews">farming news</string>
    <string name="conweather">weather reports</string>
    <string name="congovtoffers">govt offers</string>
    <string name="conbuy">buy</string>
    <string name="conmandi">Mandi Rates</string>
    <string name="commodity">Commodity</string>
    <string name="br">Basic Rate</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="producers">producers</string>
    <string-array name="commodities">
        <item>Potato</item>
        <item>Onion</item>
        <item>Rice</item>
        <item>Wheat</item>
        <item>Garlic</item>
        <item>Ginger</item>
    </string-array>
    <string-array name="potatotypes">
        <item>Kufri Lima</item>
        <item>Kufri Ashoka </item>
        <item>Kufri Badshah </item>
        <item>Kufri Bahar</item>
        <item>Kufri Dewa</item>
    </string-array>
    <string-array name="oniontypes">
        <item>Pusa Red</item>
        <item>Pusa Ratnar</item>
        <item>Pusa Madhavi</item>
        <item>Arka Pragati</item>
        <item>Arka Kalyan</item>
    </string-array>
    <string-array name="garlictypes">
        <item>Bhima Omkar</item>
        <item>Bhima Purple </item>
        <item>Agrifound White  </item>
        <item>Yamuna Safed</item>
        <item>Agrifound Parvati</item>
    </string-array>
    <string-array name="ricetypes">
        <item>Annapoornna</item>
        <item>Basmati rice </item>
        <item>Pusa Rice </item>
        <item>Laxmi Bhog</item>
        <item>hut Muri</item>
    </string-array>
    <string-array name="wheattypes">
        <item>Triticum Sphaerococcum </item>
        <item> Triticum aestivum  </item>
        <item>Triticum durum </item>
        <item> Triticum dicoccum</item>
    </string-array>
    <string-array name="gingertypes">
        <item>Suprabha</item>
        <item>Suruchi</item>
        <item>Suravi </item>
        <item>Himagiri</item>
        <item>IISR- Varada</item>
    </string-array>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="prod_img">Select Image of crop</string>
    <string name="education">Education</string>
    <string name="scan">Scan</string>
    <string name="findtrans">Find Transporter</string>
    <string name="pro_type">Types</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="verification_code">Enter OTP</string>
    <string name="send_code">Send Code</string>
    <string name="error_otp">Error</string>
    <string name="otp">Enter Your Otp Code</string>
    <string name="qtyKg">Quantity (in Kg)</string>
    <string name="buy">Buy</string>
    <string name="enter_your_complains">Enter Your Complains</string>
    <string name="edit_image">Edit Image</string>
    <string name="test_product_quality">Test Product Quality</string>
    <string-array name="india_states">
        <item>Jharkhand</item>
        <item>Bihar</item>
        <item>Gujarat</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
    </string-array>
    <string-array name="jharkhand">
        <item>Garhwa</item>
        <item> Koderma</item>
        <item>Palamu</item>
        <item>Latehar</item>
        <item>Chatra</item>
        <item> Hazaribagh</item>
        <item>Giridih</item>
    </string-array>
</resources>